# lonehash

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  lh.sh  lonehash.rockspec.in
bench/: bench_lonehash.c
cmake/: lh.sh.in  lonehash.pc.in  lonehashConfig.cmake.in
cmake/toolchains/: lonehash-cross.cmake
examples/: hash_file.c  hash_strings.c
include/lonehash/: lonehash.h.in
lua/: lh.lua  lonehash.lua
lua/examples/: hash_file.lua  hash_strings.lua
lua/lonehash/: core.c
scripts/: cpkt-toolchains.sh  package.sh  package_checksums.sh  package_cli.sh  package_lua.sh  package_source.sh  package_verify.sh  release_matrix.sh  release_version.sh  source_smoke.sh
src/: lh.c  lonehash.c  lonehash_sha256_armv8.c  lonehash_sha256_ni.c
tests/: header_c89.c  test_lh_cli.sh  test_lonehash.c  test_lua.sh
